--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,6 @@ include 'kodilla-testing'
 include 'kodilla-stream'
 include 'exception'
 include 'kodilla-exception'
+include 'kodilla-spring-intro'
+include 'kodilla-spring-intro'
 
