--- a/settings.gradle
+++ b/settings.gradle
@@ -3,10 +3,13 @@ include 'kodilla-testing'
 include 'kodilla-stream'
 include 'exception'
 include 'kodilla-exception'
-include 'kodilla-spring-intro'
-include 'kodilla-spring-intro'
+include 'kodilla-good-patterns'
 include 'kodilla-spring-web'
+include 'kodilla-spring-intro'
+include 'kodilla-spring'
 include 'kodilla-patterns'
 include 'kodilla-rps'
 include 'kodilla-jdbc'
+include 'kodilla-hibernate'
+
 
